--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,16 @@
+[build]
+  command = "npm run build"
+  publish = "dist"
+
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/api/*"
+  to = "https://qfremit.com/pilot/:splat"
   status = 200
+  force = true
+  headers = {Host = "qfremit.com"}
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
