--- a/netlify.toml
+++ b/netlify.toml
@@ -4,10 +4,10 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "https://qfremit.com/pilot/:splat"
+  to = "https://redeemtransfer.com/pilot/:splat"
   status = 200
   force = true
-  headers = {Host = "qfremit.com"}
+  headers = {Host = "redeemtransfer.com"}
 
 [[headers]]
   for = "/*"
