--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # General Application Settings
 GENERATE_SOURCEMAP=false
-VITE_API_BASE_URL=https://redeemtransfer.com/pilot
+VITE_API_BASE_URL=https://redeemtransfer.net/pilot
 VITE_APP_ENV=production
-VITE_SITE_URL=https://redeemtransfer.com/  # Update with your actual domain
+VITE_SITE_URL=https://redeemtransfer.net/  # Update with your actual domain
 
 # Environment-Specific Settings
 VITE_USE_PROXY=false  # Set to true for local development
