--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "globals": "^16.3.0",
     "react-helmet-async": "^2.0.5",
     "sharp": "^0.34.3",
+    "sitemap": "^8.0.0",
     "svgo": "^4.0.0",
     "vite": "^7.0.4",
     "vite-plugin-html": "^3.2.2",
